<resources>
    <string name="app_name">Gmix</string>
    <string name="rmb">¥</string>
    <string name="xingxing">*</string>
    <string name="download_progress_channel_message">下载进度</string>
    <string name="download_now">正在下载</string>
    <string name="usdt">USDT</string>
    <string name="cny">CNY</string>
    <string name="ren">人</string>
    <string name="text1">一级推广总数</string>
    <string name="text2">二级推广总数</string>
    <string name="text3">一级代理总数</string>
    <string name="text4">二级代理总数</string>
    <string name="text5">挂单</string>
    <string name="text6">财务记录</string>
    <string name="text7">币币账户</string>
    <string name="text8">场外账户</string>
    <string name="text9">币币资产折合</string>
    <string name="text10">场外资产折合</string>
    <string name="text11">·从币币账户到场外账户时USDT将自动兑换成NBC币.\n.兑换时NBC币价值恒定1.000CNY,USDT价值实时获取.\n.请将资金划转到交易账户进行挂单和交易操作.\n.资金划转为内部资产转移不收取手续费.</string>
    <string name="text12">·从场外账户划转到币币账户时NBC将自动兑换成USDT.\n.兑换时USDT价值实时获取.\n.资金划转为内部资产转移不收取手续费.</string>
    <string name="text13">·请至少添加一种收款方式，才能进行法币交易。\n·默认微信和支付宝收款限额5000，收款笔数限制10笔。</string>
    <string name="text14">·为确保您的支付宝信息正确，请在保存前验证，验证操作如下：\n1.点击下方“验证支付宝”按钮会显示转账二维码。\n2.开自己支付宝扫码二维码\n3.如提示“不能给自己转账”则支付宝信息正确可保存，其他情况请联系客服协助处理。</string>
    <string name="text15">step2：上传支付宝收款二维码\n获取方式：打开支付宝-收钱-保存图片</string>
    <string name="text16">点击二维码可进行更换</string>
    <string name="text17">生成验证二维码</string>
    <string name="text18">资金密码</string>
    <string name="text19">忘记密码?</string>
    <string name="text20">Loading…</string>
    <string name="text21">确 定</string>
    <string name="text22">添加新支付宝</string>
    <string name="text23"> ·您的资金密码是用来交易、提现和账户安全设置，建议不要与登录密码一致，由此产生的账户被盗，本站概不负责。</string>
    <string name="text24">邀请好友</string>
    <string name="text25">收款方式</string>
    <string name="text26">实名认证</string>
    <string name="text27">安全中心</string>
    <string name="text28">奖励明细</string>
    <string name="text29">联系客服</string>
    <string name="text30">消息中心</string>
    <string name="text31">退出登录</string>
    <string name="text32">版本号</string>
    <string name="text33">暂未开放</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="loading1">请稍候...</string>

    <string name="tipmsg" formatted="false">
        目前手机不是WiFi状态 \n
        确认是否继续下载更新？
    </string>

</resources>

