<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ff_business_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ak"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="可用资产"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y84"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/y32"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_usedprotery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0.00"
                    android:textColor="@color/white"
                    android:textSize="38sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginLeft="@dimen/y10"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/y42"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/y110">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="冻结："
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_dongjieprotery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2000"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ff_business_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y366"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg20s"
                android:layout_marginLeft="@dimen/y44"
                android:layout_marginRight="@dimen/y44"
                android:paddingTop="@dimen/y38"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="@dimen/y44"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_buy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我要买"
                            android:textColor="@color/color_333333"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="@dimen/y30"
                            android:layout_height="@dimen/y30"
                            android:src="@mipmap/b"
                            android:layout_marginLeft="@dimen/y16"/>

                        <TextView
                            android:id="@+id/tv_sell"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我要卖"
                            android:textColor="@color/color_999999"
                            android:textSize="15sp"
                            android:layout_marginLeft="@dimen/y16"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/y1"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textColor="@color/color_666666"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usdt"
                            android:textColor="@color/color_666666"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="="
                            android:textColor="@color/color_666666"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="6.92"
                            android:textColor="@color/color_666666"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cny"
                            android:textColor="@color/color_666666"
                            android:textSize="13sp"
                            android:layout_marginRight="@dimen/y30"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y1"
                    android:background="@mipmap/l"
                    android:layout_marginTop="@dimen/y34"
                    android:layout_marginLeft="@dimen/y30"
                    android:layout_marginRight="@dimen/y30"/>

            </LinearLayout>

            <hiaround.android.com.ui.widget.NoScrollViewPager
                android:id="@+id/business_viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>